Changed float formatting

--- a/experiment_analysis.ipynb
+++ b/experiment_analysis.ipynb
@@ -669,14 +669,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "final_models.sort_values(\"avg_min_rank\").to_latex(\n",
     "    buf=os.path.join(table_dir, \"all-comparison.tex\"),\n",
     "    index=False,\n",
-    "    float_format=\"{:.1f}\".format,\n",
     "    column_format=\"lrrrrrrrr\",\n",
     "    columns=[\n",
     "        \"name\",\n",
@@ -700,7 +699,17 @@
     "        \"REC\",\n",
     "        \"F1\",\n",
     "    ],\n",
-    "    formatters={\"name\": lambda x: str(model_selection[x])},\n",
+    "    formatters={\n",
+    "        \"name\": lambda x: str(model_selection[x]),\n",
+    "        \"avg_min_rank\": lambda x: \"{:.1f}\".format(x),\n",
+    "        \"avg_min_smooth_rank\": lambda x: \"{:.3f}\".format(x),\n",
+    "        \"avg_mean_rank\": lambda x: \"{:.0f}\".format(x),\n",
+    "        \"avg_mean_smooth_rank\": lambda x: \"{:.2f}\".format(x),\n",
+    "        \"area_under_roc\": lambda x: \"{:.3f}\".format(x),\n",
+    "        \"precision_0.5\": lambda x: \"{:.3f}\".format(x),\n",
+    "        \"recall_0.5\": lambda x: \"{:.3f}\".format(x),\n",
+    "        \"f1_0.5\": lambda x: \"{:.3f}\".format(x),\n",
+    "    },\n",
     ")"
    ]
   },
